--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -42,5 +42,17 @@ body{
 }
 
 body, input, button, textarea{
-  
+  font: 500 1.6rem Poppins;
+  color: var(--color-text-base);
+}
+
+.container{
+  width: 90vw; /* Ocupa 90% da largura da tela */
+  max-width: 700px;
+}
+
+@media (min-width: 700px){
+  :root{
+    font-size: 62.5%;
+  }
 }
